final commit for hosting

--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Contact</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3995650704"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3766612606"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=3886473262" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=431386394"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=426776460" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -37,7 +37,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n3,n7,i3:all.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/J85nKaeqMVdVo8lJiiCYvltYh7998kibPQHZLR9BkA6feTwgfORQT6wPH2jowRbawRyLjQStZQSkwRjDjQwa5QZRF24RwhIt5QJkjQSaweZqZQ6-4KG0-eNKda41OcFzdPUGdh4zScS0jhNlOYiaikoGdh4zScS0jhNlJ68c-W4yOWFyd1w7f6RU3MIbMg6eJMI7f6Rdn3IbMg6BJMI7f6R73MIbMg6fJMBHgIuuShAbMSOe_CIB.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/AcstJLnrIs1qi__o6walUg-m2vXezRlnhPq3YZzOrbXfeTwgfORQT6wPH2jowRbawRyLjQStZQSkwRjDjQwa5QZRF24RwhIt5QJkjQSaweZqZQ6-4KG0-eNKda41OcFzdPUGdh4zScS0jhNlOYiaikoGdh4zScS0jhNlJ68c-W4yOWFyd1w7f6RU3MIbMg6eJMI7f6Rdn3IbMg6BJMI7f6R73MIbMg6fJMBHgIuuShAbMpQS8wJB.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -65,17 +65,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
    <!-- /m_editable -->
    <nav class="MenuBar clearfix pinned-colelem" id="menuu205"><!-- vertical box -->
+    <div class="MenuItemContainer clearfix colelem" id="u7554"><!-- horizontal box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u7555" href="index.html" data-href="page:U74"><!-- horizontal box --><div class="MenuItemLabel Menu_Icons clearfix grpelem" id="u7558-4"><!-- content --><p>About Us</p></div></a>
+    </div>
     <div class="MenuItemContainer clearfix colelem" id="u206"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u209" href="index.html" data-href="page:U74"><!-- horizontal box --><div class="MenuItemLabel Menu_Icons clearfix grpelem" id="u210-4"><!-- content --><p>About Us</p></div></a>
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u209" href="domain.html" data-href="page:U6320"><!-- horizontal box --><div class="MenuItemLabel Menu_Icons clearfix grpelem" id="u210-4"><!-- content --><p>Search Candidate</p></div></a>
     </div>
-    <div class="MenuItemContainer clearfix colelem" id="u6930"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6933" href="portfolio-copy.html" data-href="page:U7175"><!-- horizontal box --><div class="MenuItemLabel Menu_Icons clearfix grpelem" id="u6934-4"><!-- content --><p>Portfolio</p></div></a>
+    <div class="MenuItemContainer clearfix colelem" id="u7575"><!-- horizontal box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u7576" href="portfolio.html" data-href="page:U7175"><!-- horizontal box --><div class="MenuItemLabel Menu_Icons clearfix grpelem" id="u7579-4"><!-- content --><p>Portfolio</p></div></a>
     </div>
-    <div class="MenuItemContainer clearfix colelem" id="u6965"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6968" href="search.html" data-href="page:U239"><!-- horizontal box --><div class="MenuItemLabel Menu_Icons clearfix grpelem" id="u6971-4"><!-- content --><p>Search</p></div></a>
-    </div>
-    <div class="MenuItemContainer clearfix colelem" id="u6993"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u6996" href="contact.html" data-href="page:U252"><!-- horizontal box --><div class="MenuItemLabel Menu_Icons clearfix grpelem" id="u6999-4"><!-- content --><p>Contact</p></div></a>
+    <div class="MenuItemContainer clearfix colelem" id="u7596"><!-- horizontal box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u7597" href="contact.html" data-href="page:U252"><!-- horizontal box --><div class="MenuItemLabel Menu_Icons clearfix grpelem" id="u7599-4"><!-- content --><p>Contact Us</p></div></a>
     </div>
    </nav>
    <div class="clearfix colelem" id="pu1110"><!-- group -->
@@ -163,7 +163,7 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 Muse.Utils.initWidget('#widgetu1114', ['#bp_infinity'], function(elem) { return new WebPro.Widget.Form(elem, {validationEvent:'submit',errorStateSensitivity:'high',fieldWrapperClass:'fld-grp',formSubmittedClass:'frm-sub-st',formErrorClass:'frm-subm-err-st',formDeliveredClass:'frm-subm-ok-st',notEmptyClass:'non-empty-st',focusClass:'focus-st',invalidClass:'fld-err-st',requiredClass:'fld-err-st',ajaxSubmit:true}); });/* #widgetu1114 */
-$('#u1483').registerOpacityScrollEffect([{"fade":200,"in":[-Infinity,243.65],"opacity":0},{"in":[243.65,243.65],"opacity":100},{"fade":0,"in":[243.65,Infinity],"opacity":100}]);/* scroll effect */
+$('#u1483').registerOpacityScrollEffect([{"in":[-Infinity,243.65],"fade":200,"opacity":0},{"in":[243.65,243.65],"opacity":100},{"in":[243.65,Infinity],"fade":0,"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
