--- a/domainPage.html
+++ b/domainPage.html
@@ -26,6 +26,7 @@ var svg_dom = d3.select("body")
       .attr("y", 200)
       .text("Web Development")
       .attr("font-size", "20px")
+      .attr("text-decoration", "underline")
       .attr("text-anchor", "middle")
       .attr("font-family", "Century Gothic")
       .on("click", displayTags);
