--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About Us</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3995650704"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3766612606"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3976656217" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=431386394"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3792295818" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -37,7 +37,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n3:all.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/gmymS3q1CtBEk9rj9sVBJTkXXw3VSwwncasry983zJbfeTwgfORQT6wPH2jowRbawRyLjQStZQSkwRjDjQwa5QZRF24RwhIt5QJkjQSaweZqZQ6-4KG0-eNKda41OcFzdPUGdh4zScS0jhNlOYiaikoGdh4zScS0jhNlJ68c-W4yOWFyd1w7f6RU3MIbMg6eJMI7f6Rdn3IbMg6BJMI7f6R73MIbMg6fJMBHgIuuShAbMd_e_CIB.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/eWzrLhQfX7-Oz4yxJSn7PggYA8DIqu6oOD65dPNWwgCfeTwgfORQT6wPH2jowRbawRyLjQStZQSkwRjDjQwa5QZRF24RwhIt5QJkjQSaweZqZQ6-4KG0-eNKda41OcFzdPUGdh4zScS0jhNlOYiaikoGdh4zScS0jhNlJ68c-W4yOWFyd1w7f6RU3MIbMg6eJMI7f6Rdn3IbMg6BJMI7f6R73MIbMg6fJMBHgIuuShAbMpVS8wJB.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -91,17 +91,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <h2>Recommend top users</h2>
    </div>
    <nav class="MenuBar clearfix pinned-colelem" id="menuu205"><!-- vertical box -->
+    <div class="MenuItemContainer clearfix colelem" id="u7554"><!-- horizontal box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u7555" href="index.html" data-href="page:U74"><!-- horizontal box --><div class="MenuItemLabel Menu_Icons clearfix grpelem" id="u7558-4"><!-- content --><p>About Us</p></div></a>
+    </div>
     <div class="MenuItemContainer clearfix colelem" id="u206"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u209" href="index.html" data-href="page:U74"><!-- horizontal box --><div class="MenuItemLabel Menu_Icons clearfix grpelem" id="u210-4"><!-- content --><p>About Us</p></div></a>
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u209" href="domain.html" data-href="page:U6320"><!-- horizontal box --><div class="MenuItemLabel Menu_Icons clearfix grpelem" id="u210-4"><!-- content --><p>Search Candidate</p></div></a>
     </div>
-    <div class="MenuItemContainer clearfix colelem" id="u6930"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6933" href="portfolio-copy.html" data-href="page:U7175"><!-- horizontal box --><div class="MenuItemLabel Menu_Icons clearfix grpelem" id="u6934-4"><!-- content --><p>Portfolio</p></div></a>
+    <div class="MenuItemContainer clearfix colelem" id="u7575"><!-- horizontal box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u7576" href="portfolio.html" data-href="page:U7175"><!-- horizontal box --><div class="MenuItemLabel Menu_Icons clearfix grpelem" id="u7579-4"><!-- content --><p>Portfolio</p></div></a>
     </div>
-    <div class="MenuItemContainer clearfix colelem" id="u6965"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6968" href="search.html" data-href="page:U239"><!-- horizontal box --><div class="MenuItemLabel Menu_Icons clearfix grpelem" id="u6971-4"><!-- content --><p>Search</p></div></a>
-    </div>
-    <div class="MenuItemContainer clearfix colelem" id="u6993"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6996" href="contact.html" data-href="page:U252"><!-- horizontal box --><div class="MenuItemLabel Menu_Icons clearfix grpelem" id="u6999-4"><!-- content --><p>Contact</p></div></a>
+    <div class="MenuItemContainer clearfix colelem" id="u7596"><!-- horizontal box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u7597" href="contact.html" data-href="page:U252"><!-- horizontal box --><div class="MenuItemLabel Menu_Icons clearfix grpelem" id="u7599-4"><!-- content --><p>Contact Us</p></div></a>
     </div>
    </nav>
    <div class="clearfix colelem" id="u561-4"><!-- content -->
@@ -109,11 +109,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
    <div class="clearfix colelem" id="pbuttonu540"><!-- group -->
     <!-- m_editable region-id="editable-static-tag-U540" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext Button museBGSize clearfix grpelem" id="buttonu540" href="portfolio-copy.html" data-href="page:U7175" data-muse-uid="U540"><!-- container box --><!-- m_editable region-id="editable-static-tag-U508-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" --><div class="Buttons_Style clearfix grpelem" id="u508-4" data-muse-uid="U508" data-muse-type="txt_frame"><!-- content --><p class="Buttons_Large">PORTFOLIO</p></div><!-- /m_editable --></a>
+    <a class="nonblock nontext Button museBGSize clearfix grpelem" id="buttonu540" href="portfolio.html" data-href="page:U7175" data-muse-uid="U540"><!-- container box --><!-- m_editable region-id="editable-static-tag-U508-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" --><div class="Buttons_Style clearfix grpelem" id="u508-4" data-muse-uid="U508" data-muse-type="txt_frame"><!-- content --><p class="Buttons_Large">PORTFOLIO</p></div><!-- /m_editable --></a>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U536" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext Button museBGSize clearfix grpelem" id="buttonu536" href="search.html" data-href="page:U239" data-muse-uid="U536"><!-- container box --><!-- m_editable region-id="editable-static-tag-U506-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" --><div class="Buttons_Style clearfix grpelem" id="u506-4" data-muse-uid="U506" data-muse-type="txt_frame"><!-- content --><p class="Buttons_Large">SEARCH</p></div><!-- /m_editable --></a>
-    <!-- /m_editable -->
+    <div class="Button museBGSize clearfix grpelem" id="buttonu536"><!-- container box -->
+     <!-- m_editable region-id="editable-static-tag-U506-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext Buttons_Style clearfix grpelem" id="u506-4" href="domain.html" data-href="page:U6320" data-muse-uid="U506" data-muse-type="txt_frame"><!-- content --><p class="Buttons_Large">SEARCH CANDIDATE</p></a>
+     <!-- /m_editable -->
+    </div>
    </div>
    <!-- m_editable region-id="editable-static-tag-U1075" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
    <a class="nonblock nontext anim_swing ose_pre_init pinned-colelem" id="u1075" href="index.html#top" data-href="anchor:U69:U1074" data-muse-uid="U1075" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-2.1316282072803006e-14" data-mu-ie-matrix-dy="0"><!-- simple frame --></a>
@@ -147,7 +149,7 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.initWidget('#pamphletu422', ['#bp_infinity'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'none',autoPlay:true,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:false,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu422 */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
-$('#u1075').registerOpacityScrollEffect([{"fade":200,"in":[-Infinity,151.05],"opacity":0},{"in":[151.05,151.05],"opacity":100},{"fade":0,"in":[151.05,Infinity],"opacity":100}]);/* scroll effect */
+$('#u1075').registerOpacityScrollEffect([{"in":[-Infinity,151.05],"fade":200,"opacity":0},{"in":[151.05,151.05],"opacity":100},{"in":[151.05,Infinity],"fade":0,"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
@@ -155,6 +157,5 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 </script>
   <!-- RequireJS script -->
   <script src="scripts/require.js?crc=244322403" type="text/javascript" async data-main="scripts/museconfig.js?crc=36584860" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
-  <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
    </body>
 </html>
