--- a/tablet/index.html
+++ b/tablet/index.html
@@ -23,8 +23,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>My Name</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=3995650704"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3938696687"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4245999220" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=129907376"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3775727055" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -34,10 +34,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <script src="../scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n3:all;josefin-sans:i4:all.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/josefin-sans:i4:all;open-sans:n3:all.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/wHJct-uhj3vBMcMv1YzxgHBcEsGQ8a-pQzL7tD_OSEXfeTwgfORQT6wPH2jowRbawRyLjQStZQSkwRjDjQwa5QZRF24RwhIt5QJkjQSaweZqZQ6-4KG0-eNKda41OcFzdPUGdh4zScS0jhNlOYiaikoGdh4zScS0jhNlJ68c-W4yOWFyd1w7f6Rdn3IbMg6BJMI7f6R73MIbMg6fJMI7f6RU3MIbMg6eJMBHgIuuShAbMd1e_CIB.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/7lQiGeII-DkN3VOZIiTlLt9d7xlFKbD5mmY0PnZfcTJfeTwgfORQT6wPH2jowRbawRyLjQStZQSkwRjDjQwa5QZRF24RwhIt5QJkjQSaweZqZQ6-4KG0-eNKda41OcFzdPUGdh4zScS0jhNlOYiaikoGdh4zScS0jhNlJ68c-W4yOWFyd1w7f6Rdn3IbMg6BJMI7f6R73MIbMg6fJMI7f6RU3MIbMg6eJMBHgIuuShAbMi_S8wJB.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
