--- a/phone/index.html
+++ b/phone/index.html
@@ -18,8 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>My Name</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=3995650704"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=359660925"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4119432988" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4161960482"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=120281508" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -29,10 +29,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <script src="../scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n3,n7:all;josefin-sans:i4:all.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/josefin-sans:i4:all;open-sans:n3,n7:all.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/SqxALuJCXdH2CIuROxnMyZo6WFlquKO0FLaCNM5eaZIfeTwgfORQT6wPH2jowRbawRyLjQStZQSkwRjDjQwa5QZRF24RwhIt5QJkjQSaweZqZQ6-4KG0-eNKda41OcFzdPUGdh4zScS0jhNlOYiaikoGdh4zScS0jhNlJ68c-W4yOWFyd1w7f6Rdn3IbMg6BJMI7f6R73MIbMg6fJMI7f6RU3MIbMg6eJMBHgIuuShAbMdWe_CIB.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/uqKtd59wvpMy-bjv-URlrl1FpMA9mYD3yMlzI116mjqfeTwgfORQT6wPH2jowRbawRyLjQStZQSkwRjDjQwa5QZRF24RwhIt5QJkjQSaweZqZQ6-4KG0-eNKda41OcFzdPUGdh4zScS0jhNlOYiaikoGdh4zScS0jhNlJ68c-W4yOWFyd1w7f6Rdn3IbMg6BJMI7f6R73MIbMg6fJMI7f6RU3MIbMg6eJMBHgIuuShAbMinS8wJB.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
